--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
@@ -18,6 +19,7 @@
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-just-parallax": "^3.1.16",
+    "react-live": "^4.1.8",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
