--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
+    "mongoose": "^8.19.3",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-just-parallax": "^3.1.16",
     "react-live": "^4.1.8",
