--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-icons": "^5.5.0",
     "react-just-parallax": "^3.1.16",
     "react-live": "^4.1.8",
-    "react-typed": "^2.0.12"
+    "react-syntax-highlighter": "^16.1.0",
+    "react-typed": "^2.0.12",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
